@@ -21,6 +21,11 @@ In the patch listing below, I've marked the parts of the patch that should be re
 
 --[[Daniel Andersson]]
 
+> I have applied this, but I left the temp file in. 
+> The overhead seems small since it will only be run once per ikiwiki run,
+> and only when `ikiwiki --gettime` is run, or the first time
+> ikiwiki runs. Thanks for this! [[done]] --[[Joey]] 
+
 ---
 
 	diff -r 78a217fb13f3 -r 1b6c46b62a28 Plugin/mercurial.pm
