@@ -5,6 +5,7 @@ ikiwiki (3.20110716) UNRELEASED; urgency=low
     can be used. (Daniel Andersson)
   * mercurial: fix viewing of a diff containing non-utf8 changes.
     (Daniel Andersson)
+  * mercurial: Make both rcs_getctime and rcs_getmtime fast. (Daniel Andersson)
 
  -- Joey Hess <joeyh@debian.org>  Tue, 19 Jul 2011 11:22:52 -0400
 
